packages/jaeger-ui/src/components/App/TraceIDSearchInput.css
/*
Copyright (c) 2017 Uber Technologies, Inc.
SPDX-License-Identifier: Apache-2.0
*/

.TraceIDSearchInput--form {
  line-height: inherit;
}

/* Dark styling for header search - nav is always dark */
.TraceIDSearchInput--input.ant-input-affix-wrapper {
  background-color: rgba(255, 255, 255, 0.1);
  border-color: rgba(255, 255, 255, 0.2);
}

.TraceIDSearchInput--input.ant-input-affix-wrapper:hover,
.TraceIDSearchInput--input.ant-input-affix-wrapper:focus,
.TraceIDSearchInput--input.ant-input-affix-wrapper-focused {
  background-color: rgba(255, 255, 255, 0.15);
  border-color: rgba(255, 255, 255, 0.4);
}

.TraceIDSearchInput--input .ant-input {
  background-color: transparent;
  color: rgba(255, 255, 255, 0.85);
}

.TraceIDSearchInput--input .ant-input::placeholder {
  color: rgba(255, 255, 255, 0.5);
}

.TraceIDSearchInput--input .ant-input-prefix {
  color: rgba(255, 255, 255, 0.5);
}

.TraceIDSearchInput--input .ant-input-clear-icon {
  color: rgba(255, 255, 255, 0.5);
}

.TraceIDSearchInput--input .ant-input-clear-icon:hover {
  color: rgba(255, 255, 255, 0.85);
}

